workflowr::wflow_publish("ridge_em.Rmd")

--- a/analysis/ridge_em.Rmd
+++ b/analysis/ridge_em.Rmd
@@ -207,6 +207,48 @@ ridge_em5 = function(y,X, s2, sb2, l2, niter=10){
 }
 ```
 
+
+### Alternative EM for this parameterization
+
+This is an alternative EM that reparameterizes
+the optimization over $s^2 \Sigma$.
+The result is that the update for
+$s^2$ simplifies and does not depend on $\Sigma$.
+
+```{r}
+ridge_em6 = function(y,X, s2, sb2, l2, niter=10){
+  XtX = t(X) %*% X
+  Xty = t(X) %*% y
+  yty = t(y) %*% y
+  n = length(y)
+  p = ncol(X)
+  loglik = rep(0,niter)
+  for(i in 1:niter){
+    
+    SigmaY = l2* s2* sb2 *(X %*% t(X)) + diag(s2,n)
+    loglik[i] = mvtnorm::dmvnorm(as.vector(y),sigma = SigmaY,log=TRUE)
+    
+    #V = chol2inv(chol(XtX+ diag(s2/(sb2*l2),p))) 
+    
+    Sigma1 = chol2inv(chol((sb2/s2) * XtX + diag(1/(s2*l2),p) ))  # posterior variance of b
+    mu1 = (sqrt(sb2)/s2)*as.vector(Sigma1 %*% Xty) # posterior mean of b
+    
+   
+    sb2 = (sum(mu1*Xty)/sum(diag(XtX %*% (mu1 %*% t(mu1) + Sigma1))))^2  #same as em3
+    
+    new_s2 = as.vector((sum((mu1^2)/l2)+ yty + sb2*sum(diag(XtX %*% (mu1 %*% t(mu1) )))- 2*sqrt(sb2)*sum(Xty*mu1))/(n))  
+    # as in em5 but without Sigma terms and without p in denominator
+    Sigma1 = (new_s2/s2) * Sigma1  
+    s2 = new_s2
+    
+    l2 = mean(mu1^2+diag(Sigma1))/s2 #as in em3 but divided by s2
+   
+  }
+  return(list(s2=s2,sb2=sb2,l2=l2,loglik=loglik,postmean=mu1*sqrt(sb2)))
+}
+```
+
+
 ## Simple Simulations
 
 This is a simple simulation with independent design matrix.
@@ -232,6 +274,7 @@ y.em2 = ridge_em2(y,X,1,1,100)
 y.em3 = ridge_em3(y,X,1,1,1,100)
 y.em4 = ridge_em4(y,X,1,1,100)
 y.em5 = ridge_em5(y,X,1,1,1,100)
+y.em6 = ridge_em6(y,X,1,1,1,100)
 
 
 plot_loglik = function(res){
@@ -252,7 +295,7 @@ plot_loglik = function(res){
   }
 
 }
-res = list(y.em1,y.em2,y.em3,y.em4,y.em5)
+res = list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6)
 plot_loglik(res)
 ```
 
@@ -268,8 +311,9 @@ y.em2 = ridge_em2(y,X,1,1,100)
 y.em3 = ridge_em3(y,X,1,1,1,100)
 y.em4 = ridge_em4(y,X,1,1,100)
 y.em5 = ridge_em5(y,X,1,1,100)
+y.em6 = ridge_em5(y,X,1,1,100)
 
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 ```
 
 ## Trendfiltering Simulations
@@ -308,15 +352,17 @@ y.em4 = ridge_em4(y,X,1,1,100)
 lines(X %*% y.em4$postmean,col=4,lwd=2)
 
 y.em5 = ridge_em5(y,X,1,1,1,100)
-lines(X %*% y.em4$postmean,col=5,lwd=2)
+lines(X %*% y.em5$postmean,col=5,lwd=2)
 
+y.em6 = ridge_em6(y,X,1,1,1,100)
+lines(X %*% y.em6$postmean,col=6,lwd=2)
 
 ```
 
 
 Look at the likelihoods:
 ```{r}
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 ```
 
 Run the second one longer and check it:
@@ -329,12 +375,15 @@ y.em2$sb2
 y.em3$sb2 * y.em3$l2
 y.em4$sb2 * y.em4$s2
 y.em5$sb2 * y.em5$l2 * y.em5$s2
+y.em6$sb2 * y.em6$l2 * y.em6$s2
+
 
 y.em1$s2
 y.em2$s2
 y.em3$s2
 y.em4$s2
 y.em5$s2
+y.em6$s2
 ```
 
 
@@ -347,7 +396,8 @@ y.em2 = ridge_em2(y,X,10,1,100)
 y.em3 = ridge_em3(y,X,10,1,1,100)
 y.em4 = ridge_em4(y,X,10,1,100)
 y.em5 = ridge_em5(y,X,10,1,1,100)
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+y.em6 = ridge_em6(y,X,10,1,1,100)
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 ```
 
 
@@ -358,7 +408,8 @@ y.em2 = ridge_em2(y,X,1,10,100)
 y.em3 = ridge_em3(y,X,1,10,10,100)
 y.em4 = ridge_em4(y,X,1,10,100)
 y.em5 = ridge_em5(y,X,1,10,10,100)
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+y.em6 = ridge_em6(y,X,1,10,10,100)
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 ```
 
 Try starting both in wrong place. Interestingly in this example em4 seems to converge
@@ -369,7 +420,8 @@ y.em2 = ridge_em2(y,X,.1,10,100)
 y.em3 = ridge_em3(y,X,.1,10,10,100)
 y.em4 = ridge_em4(y,X,.1,10,100)
 y.em5 = ridge_em5(y,X,.1,10,10,100)
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+y.em6 = ridge_em6(y,X,.1,10,10,100)
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 y.em4$s2
 y.em1$s2
 ```
@@ -407,11 +459,13 @@ lines(X %*% y.em4$postmean,col=4,lwd=2)
 y.em5 = ridge_em5(y,X,1,1,1,100)
 lines(X %*% y.em5$postmean,col=5,lwd=2)
 
+y.em6 = ridge_em6(y,X,1,1,1,100)
+lines(X %*% y.em6$postmean,col=6,lwd=2)
 ```
 
 The EM2 and EM3 and EM5 converge faster here:
 ```{r}
-plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5))
+plot_loglik(list(y.em1,y.em2,y.em3,y.em4,y.em5,y.em6))
 ```
 
 
@@ -419,8 +473,9 @@ Try starting the expanded algorithm from very large lambda... it still seems to 
 ```{r}
 y.em3b = ridge_em3(y,X,1,1,100,100)
 y.em5b = ridge_em5(y,X,1,1,100,100)
+y.em6b = ridge_em6(y,X,1,1,100,100)
 
-plot_loglik(list(y.em1,y.em2,y.em3b,y.em4,y.em5b))
+plot_loglik(list(y.em1,y.em2,y.em3b,y.em4,y.em5b,y.em6b))
 ```
 
 
