--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -41,6 +41,9 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Fit lasso by EM](lasso_em.html)
 * [teach myself ADMM (L1 and L0)](admm_01.html)
 
+# EBMR
+
+* [An initially suprising result for EB lasso](eblasso.suprising.html)
 
 # Mash
 
