--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,6 +19,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 # Mr Ash
 
+* [implementing mr ash as a penalized method](mr_ash_pen.html)
 * [coordinate ascent and parallel version](mr_ash_sca.html)
 * [mr.ash.alpha applied to changepoint problems](mr.ash.changepoint.html)
 * [combining mr.ash and ridge regression/iterative ridge regression](mr.ash_ridge.html)
