--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -98,6 +98,10 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [selective inference with correlated variables](selective_inference.html)
 * [hierarchical inference example](hierinf_toyexample.html)
 
+# LD score regression
+
+* [An initial look at XtX (Sigma)^{-1}](ldsr_01.html)
+
 # Missing Data in regression
 
 * [Pseudo-data idea](mr_missing_data.html)
