--- a/analysis/flashier_stocks.Rmd
+++ b/analysis/flashier_stocks.Rmd
@@ -55,96 +55,92 @@ heatmap(S, xlab = names(prices), symm=TRUE)
 
 ### Flashier on the raw data
 
-Note I use column-specific variances. I found backfitting really increases
-the sparsity in this case (particularly in the time dimension).
+Note I tried to use column-specific residual variances
+but it errored out. So I switched to constant variances.
+Backfitting seemed to clean up the factors so I did that.
 
 ```{r}
 #library("flashr")
 library("ebnm")
 library("flashier")
-#fit.f = flashr::flash(as.matrix(log_prices),ebnm_fn = "ebnm_pl") ## errors out
-fit.f = flashier::flash(as.matrix(log_prices),prior.family = prior.point.laplace(), var.type = 2, backfit = TRUE)
-
+#fit.f = flashr::flash(as.matrix(log_returns),ebnm_fn = "ebnm_pl") ## errors out
+#fit.f = flashier::flash(as.matrix(log_returns),prior.family = prior.point.laplace(), var.type = 2) # this produces an error
+fit.f = flashier::flash(as.matrix(log_returns),prior.family = prior.point.laplace(), var.type = 0, backfit=TRUE)
 ```
 
-Plot the factors. Note that factor 1 is just a trend and factor 2 looks kind of like a sine wave.... is this just an artifact of looking at time series data? This result does maybe suggest that the data are auto-correlated along the time series.
+Plot the factors. 
 
 ```{r}
-for(i in 1:8){
+for(i in 1:11){
   barplot(fit.f$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
 }
 
-for(i in 1:8){
+for(i in 1:11){
   plot(fit.f$loadings.pm[[1]][,i], main=paste0("Factor ",i))
 }
 ```
 
 
-### JNJ issue, and residual variance
-
-I was curious when I noticed that JNJ does not seem to belong
-to any factors except the first! In fact the first factor
-seems to be exactly JNJs log returns. It is overfitting and
-giving a very small residual variance for that stock...
-
-```{r}
-fit.f$residuals.sd
-plot(fit.f$loadings.pm[[1]][,1],log_prices[,10], main="factor 1 vs JNJ log-returns")
-```
-
-Here I try using no column-specific variance to avoid that overfitting.
-I think this is a better idea.
-Now the first 3 factors kind of all look like the fourier components....
-```{r}
-fit.f2 = flashier::flash(as.matrix(log_prices),prior.family = prior.point.laplace(), var.type = 0, backfit = TRUE)
-fit.f2$residuals.sd
-
-for(i in 1:5){
-  barplot(fit.f2$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
-}
-
-for(i in 1:5){
-  plot(fit.f2$loadings.pm[[1]][,i], main=paste0("Factor ",i))
-}
-```
-
 
 ### Flashier on the correlation matrix
 
-Try factor analysis on the correlation matrix. I found it interesting
-that in the raw data analysis LDSVF was loaded on the first factor, but
-not in the correlation analysis, which I guess is because the correlation removes some of the overall mean effect and LDSVF is almost 
-independent of others
-after that is removed? 
+Try factor analysis on the correlation matrix. We see
+a lot fewer factors. I am interested why this is. I didn't really
+expect such a big difference when the factors are dense, as they
+seem to be here (in time space).
 
-Also, I feel like the raw correlation matrix shows some additional
-structure that is likely to be real -- eg PFE and JNJ correlation -- that
-is not picked out here....but maybe that is naive on my part.
+One possibility is that although the inferred factors are dense, they are long tailed and the inferred factors are driven by the
+outliers. It might be worth doing some simulations with
+dense long-tailed factors and comparing inference from correlation vs
+full data.
+
+Another possibility is that many of the raw data results are
+driven by stock-specific factors. Here stock-specific factors
+are not represented because I remove the diagonal. And the
+2 factors identified could be thought of as 3 factors if we went non-negative... in that case the differences between the results
+do not look so stark. 
+
+I did try running this without removing diagonal, but the stock-specific
+factors don't get picked up; I think this may be due to problems
+converging to them (eg svd would not initialize near them...)
+That may suggest it could also be difficult to find other sparse factors
+of course (eg involving pairs of stocks). 
+
 
 ```{r}
 Smiss = S
 diag(Smiss) <- NA
-S.f = flashier::flash(Smiss,prior.family = prior.point.laplace(), var.type = 0)
+S.f = flashier::flash(Smiss,prior.family = prior.point.laplace(), var.type = 0, backfit=TRUE)
 for(i in 1:2){
   barplot(S.f$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
 }
 ```
 
+### Flashier on the covariance matrix
+
+Try factor analysis on the covariance matrix. We 
+still see a lot fewer factors. 
+
+
+```{r}
+S2 = cov(log_returns)
+S2.f = flashier::flash(S2,prior.family = prior.point.laplace(), var.type = 0, backfit = TRUE)
+for(i in 1:4){
+  barplot(S2.f$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
+}
+```
 
 ### Flashier on the standardized raw data
 
-I was kind of surprised no factor picked out the JNJ/PFE correlation,
-so I tried rerunning on the standardized raw data. It still did
-not pick that out as a separate factor, but maybe it is naive to think
-things would be as simple as that.
+Here I tried rerunning on the standardized raw data to see how that affects things. 
 
 ```{r}
-fit.f3 = flashier::flash(scale(log_prices),prior.family = prior.point.laplace(), var.type = 0, backfit = TRUE)
-for(i in 1:7){
+fit.f3 = flashier::flash(scale(log_returns),prior.family = prior.point.laplace(), var.type = 0, backfit = TRUE)
+for(i in 1:13){
   barplot(fit.f3$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
 }
 
-for(i in 1:7){
+for(i in 1:13){
   plot(fit.f3$loadings.pm[[1]][,i], main=paste0("Factor ",i))
 }
 ```
@@ -181,10 +177,10 @@ haar_inv = function(x,scale=sqrt(2)){
 }
 ```
 
-Now I plot the above fitted factors after haar transform. As expected 
-they are sparser in that basis. 
+Now I plot the above fitted factors after haar transform. There isn't an
+obvious decrease in sparsity (not surpising since there was not an obvious spatiol component.)
 ```{r}
-for(i in 1:7){
+for(i in 1:13){
   plot(haar(fit.f3$loadings.pm[[1]][1:2048,i]), main=paste0("Factor ",i, " (transformed space)"))
 }
 ```
@@ -215,7 +211,7 @@ heatmap(S.h, xlab = names(prices), symm=TRUE)
 I'm not quite sure of the right way to proceed here... I'm just going
 to apply flash to the wavelet transformed data, even though that does not really seem quite right (the iid prior on wavelet coefficients at different scales does not really seem sensible.)
 ```{r}
-lp.h.f = flashier::flash(lp.h)
+lp.h.f = flashier::flash(lp.h, prior.family=prior.point.laplace(), backfit=TRUE)
 for(i in 1:8){
   barplot(lp.h.f$loadings.pm[[2]][,i], names.arg=names(prices), horiz=TRUE,las=2, main=paste0("Factor ",i))
 }
@@ -229,6 +225,4 @@ for(i in 1:8){
 }
 ```
 
-Well this certainly made a difference: the first factors are no
-longer the time series type trends etc....Also they are not very
-spatially smooth. We may need to work on that.
+
