wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -44,6 +44,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Fit lasso by EM](lasso_em.html)
 * [teach myself ADMM (L1 and L0)](admm_01.html)
+* [check scaling of glmnet with n](lasso_complexity.html)
 
 # EBMR
 
