workflowr::wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -122,6 +122,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 # Single cell data
 
 * [explore t test on log-transformed data](simple_transform_simulation.html)
+* [initial play with sinkhorn normalization](sinkhorn.html)
 
 # flash-drift
 
