--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -129,7 +129,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [look at SVD applied to tree structured data](tree_pca.html)
 * [Eigen-decomposition applied to some simple 4- and 8-tip trees](tree_pca_02.html)
 * [Apply sparsepca and flash to some tree data](tree_pca_03.html)
-* [Look at affect of size of first factor on flash](flash_f1_size.html)
+* [Look at effect of size of first factor on flash](flash_f1_size.html)
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
