--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -74,6 +74,8 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [Method of moments for EbayesThresh ](ebayes.mm.html)
 
 * [flashier run on stocks data](flashier_stocks.html)
+* [Notes on a sparse PCA objective function](spca_objective1.html)
+
 
 # NMF
 
