--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -39,6 +39,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [ADMM for ridge regression with heterogenous prior variances](ridge_admm.html)
 
+* [Sloppy ADMM](sloppy_admm.html)
 
 # Lasso
 
