--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -27,7 +27,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 * [mr ash vs lasso: example where lasso does better](mr_ash_vs_lasso.html)
 * [mr ash vs lasso: follow-up checking objective fn](mr_ash_vs_lasso_02.html)
 * [lasso vs ridge: follow-up checking p=1000 vs p=2000](lasso_vs_ridge.html)
-
+* [Debugging and scaling](mr.ash.debug.html)
 
 # Ridge Regression
 
