workflowr::wflow_publish("index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -79,7 +79,7 @@ This repo is my "catch-all" for putting things in that may relate to various ong
 
 * [Notes on the log1p transform for count/Poisson data](flashier_log1p.html)
 
-
+* [Initial runs of flashier on text data](flashier_sla_text.html)
 
 # NMF
 
